[gd_scene load_steps=11 format=3 uid="uid://c3i2qg7f3e6hq"]

[ext_resource type="Script" path="res://core/sidescroller_main.gd" id="1_w7s42"]
[ext_resource type="PackedScene" uid="uid://duso0ahb6lxjg" path="res://assets/characters/alisa/alisa.tscn" id="2_faxvj"]
[ext_resource type="Script" path="res://core/classes/camera/camera_target_position.gd" id="3_5rup2"]
[ext_resource type="Script" path="res://core/classes/camera/gameplay_camera_2d.gd" id="3_jpdgf"]
[ext_resource type="Script" path="res://core/classes/camera/screen_shake_camera.gd" id="4_h6djx"]
[ext_resource type="Script" path="res://assets/hud/fps_counter.gd" id="6_xk1lb"]
[ext_resource type="PackedScene" path="res://assets/hud/components/yes_no_menu/yes_no_menu.tscn" id="7_8s6i4"]
[ext_resource type="PackedScene" uid="uid://cq4u36n2dswf" path="res://assets/hud/action_hud/sidescroller_hud.tscn" id="8_bocmk"]

[sub_resource type="Animation" id="Animation_jgklv"]
resource_name = "player_defeated"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ons8l"]
_data = {
"player_defeated": SubResource("Animation_jgklv")
}

[node name="Main" type="Node"]
script = ExtResource("1_w7s42")
player_actor = ExtResource("2_faxvj")
initial_stage_file_path = "res://assets/stages/horizon_hills/horizon_hills_act_1-third_stretch.tscn"

[node name="CameraTargetPosition" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_5rup2")

[node name="GameplayCamera" type="Camera2D" parent="CameraTargetPosition"]
unique_name_in_owner = true
position = Vector2(-712, 512)
position_smoothing_enabled = true
drag_vertical_enabled = true
drag_top_margin = 0.3
drag_bottom_margin = 0.3
editor_draw_limits = true
script = ExtResource("3_jpdgf")
get_limits_from_main = false

[node name="ScreenShakeCamera" type="Node" parent="CameraTargetPosition/GameplayCamera"]
script = ExtResource("4_h6djx")

[node name="TransitionCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(-712, 512)
limit_left = -800
limit_top = -500
limit_right = 2700
limit_bottom = 600
drag_vertical_enabled = true
drag_top_margin = 0.3
drag_bottom_margin = 0.3
editor_draw_limits = true

[node name="ActorsParent" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="DebugInfo" type="CanvasLayer" parent="."]
layer = 127

[node name="Control" type="Control" parent="DebugInfo"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FPS Counter" type="Label" parent="DebugInfo/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -64.0
offset_right = 352.0
offset_bottom = -44.0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "FPS"
script = ExtResource("6_xk1lb")

[node name="Work In Progress Label" type="Label" parent="DebugInfo/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -39.0
offset_right = 362.0
offset_bottom = -19.0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Work In Progress - Nothing you see is final!"

[node name="PopupCanvas" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 101

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ons8l")
}

[node name="SidescrollerHUD" parent="." instance=ExtResource("8_bocmk")]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PlayerDefeatedScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PlayerDefeatedScreen"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="YesNoMenu" parent="CanvasLayer/PlayerDefeatedScreen" instance=ExtResource("7_8s6i4")]
layout_mode = 1

[node name="VBoxContainer" parent="CanvasLayer/PlayerDefeatedScreen/YesNoMenu" index="0"]
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="MessageLabel" parent="CanvasLayer/PlayerDefeatedScreen/YesNoMenu/VBoxContainer" index="0"]
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]Ouch! Game Over!
Retry?[/center]"

[editable path="CanvasLayer/PlayerDefeatedScreen/YesNoMenu"]
